--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,9 @@
-site_name: My Docs
+site_name: EO Exploitation Platform Common Architecture
+# site_url: https://deployment-guide.docs.eoepca.org
+# repo_url: https://github.com/EOEPCA/deployment-guide
+# edit_uri: ""
+
+theme:
+  # name: mkdocs
+  # name: readthedocs
+  name: material # https://squidfunk.github.io/mkdocs-material/creating-your-site/
