--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,15 @@ site_name: EO Exploitation Platform Common Architecture
 # repo_url: https://github.com/EOEPCA/deployment-guide
 # edit_uri: ""
 
+nav:
+  - index.md
+  - Tutorials:
+    - tutorials/index.md
+  - How-Tos:
+    - howtos/my-howto.md
+  - Technical:
+    - technical/index.md
+
 theme:
   # name: mkdocs
   # name: readthedocs
