--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,3 +18,27 @@ theme:
   # name: mkdocs
   # name: readthedocs
   name: material # https://squidfunk.github.io/mkdocs-material/creating-your-site/
+
+plugins:
+  - autorefs
+
+markdown_extensions:
+  - tables
+  - toc:
+      permalink: ⚓︎
+      toc_depth: 4
+  - smarty
+  - sane_lists
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - abbr
+  - attr_list
+  - pymdownx.snippets:
+      auto_append:
+        - includes/abbreviations.md
