--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,8 @@ nav:
   - EOEPCA Documentation:
     - index.md
     - Tutorials:
-      - tutorials/index.md
+      - tutorials/mastering-eo-application-packaging-with-CWL.md
+      - tutorials/CWL-guide-for-eo.md
     - How-Tos:
       - howtos/deploy-eoepca-to-my-platform.md
       - howtos/processing-inputs-from-workspace.md
