Add Federated Orchestrator to the BB menu
refs: https://github.com/Open-EO/openeo-aggregator/issues/142,
https://github.com/EOEPCA/roadmap/issues/7, https://github.com/EOEPCA/roadmap/issues/11

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
       - Building Blocks:
         - MLOps: technical/mlops-bb.md
         - Resource Registration: technical/resource-registration-bb.md
+        - Federated Orchestrator: technical/federated-orchestrator-bb.md
         - Example (template): technical/BB-example.md
 
 theme:
