--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,19 +9,22 @@ nav:
     - Technical:
       - System Architecture: /projects/architecture
       - Deployment Guide: /projects/deploy
-      - Building Blocks:
+      - Building Blocks (Platform):
         - Resource Discovery: /projects/resource-discovery
         - Resource Registration: /projects/resource-registration
         - Data Access: /projects/data-access
         - Datacube Access: /projects/datacube-access
         - Workspace: /projects/workspace
         - Processing: /projects/processing
+        - MLOps: /projects/mlops
+        - Resource Health: /projects/resource-health
+        - Notification & Automation: technical/notification-automation-bb.md
+      - Building Blocks (Federation):
         - Federated Orchestrator: technical/federated-orchestrator-bb.md
+        - Identity & Access Management: /projects/iam
+      - Building Blocks (Applications):
         - Application Hub: /projects/application-hub
         - Application Quality: /projects/application-quality
-        - MLOps: /projects/mlops
-        - Identity & Access Management: /projects/iam
-        - Resource Health: /projects/resource-health
     - Tutorials:
       - EO Application Packages:
         - Guides for EO Application Packages: https://github.com/eoap
@@ -36,20 +39,19 @@ theme:
   # name: mkdocs
   # name: readthedocs
   name: material # https://squidfunk.github.io/mkdocs-material/creating-your-site/
-  navigation_depth: 4
+  navigation_depth: 5
 
   # For `material` theme...
   logo: img/favicon.ico
   favicon: img/favicon.ico
   features:
     # Navigation
-    - navigation.expand
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
     - navigation.sections
-    # - navigation.expand
+    - navigation.expand
     # - toc.integrate
     - navigation.top
     # Content
