--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,9 @@ nav:
         - Application Hub: /projects/application-hub
         - Application Quality: /projects/application-quality
       - Tools:
-        - Application Package Development Tools: technical/application-package-development-tools.md
+        - OGC Application Package:
+          - Development Tools: technical/application-package-development-tools.md
+          - Validator: technical/application-package-validator.md
     - Tutorials:
       - EO Application Packages:
         - Guides for EO Application Packages: https://github.com/eoap
